scrollbar isssue is fixed

--- a/src/components/overwriteEditor.css
+++ b/src/components/overwriteEditor.css
@@ -40,8 +40,7 @@
 
 .sun-editor .se-wrapper-inner {
   min-height: 408px !important;
-  overflow-x: hidden !important;
-  overflow-y: hidden !important;
+
   height: 100%;
 }
 .sun-editor .se-container {
